Financeiro/main/default/objects/Periodo__c/fields/perc_utilizado__c.field-meta.xml
<CustomField>
    <fullName>perc_utilizado__c</fullName>
    <formula>Total_saidas__c / Total_entradas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>