Financeiro/main/default/objects/Periodo__c/fields/Saldo_previsto__c.field-meta.xml
<CustomField>
    <fullName>Saldo_previsto__c</fullName>
    <formula>IF(
 Total_previsto__c &gt; Total_saidas__c
 , Total_previsto__c - Total_saidas__c
 , 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo do previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>