Financeiro/main/default/objects/Periodo__c/fields/Total_previsto__c.field-meta.xml
<CustomField>
    <fullName>Total_previsto__c</fullName>
    <label>Total previsto</label>
    <summarizedField>Agrupador__c.Total_previsto__c</summarizedField>
    <summaryFilterItems>
        <field>Agrupador__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Débito</value>
    </summaryFilterItems>
    <summaryForeignKey>Agrupador__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>