Financeiro/main/default/objects/Periodo__c/fields/Total_saidas__c.field-meta.xml
<CustomField>
    <fullName>Total_saidas__c</fullName>
    <label>Total de saídas</label>
    <summarizedField>Agrupador__c.Total_utilizado__c</summarizedField>
    <summaryFilterItems>
        <field>Agrupador__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Débito</value>
    </summaryFilterItems>
    <summaryForeignKey>Agrupador__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>