Financeiro/main/default/objects/Periodo__c/fields/Valor_poupado__c.field-meta.xml
<CustomField>
    <fullName>Valor_poupado__c</fullName>
    <formula>Total_entradas__c - Total_saidas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor poupado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>