Financeiro/main/default/objects/Periodo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_entradas__c</columns>
    <columns>Total_saidas__c</columns>
    <columns>Total_previsto__c</columns>
    <columns>Valor_poupado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>