Financeiro/main/default/objects/Periodo__c/listViews/Mes_atual.listView-meta.xml
<ListView>
    <fullName>Mes_atual</fullName>
    <columns>NAME</columns>
    <columns>Total_entradas__c</columns>
    <columns>Total_saidas__c</columns>
    <columns>Total_previsto__c</columns>
    <columns>Valor_poupado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_inicial__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Mês atual</label>
</ListView>